# serializer version: 1
# name: TestUpgrade.test_upgrade
  list([
    dict({
      'administrator_role': 'full',
      'handle': 'full_admin',
      'id': 1,
      'legacy_id': 'full_admin_1',
    }),
    dict({
      'administrator_role': 'spaces',
      'handle': 'spaces_admin',
      'id': 2,
      'legacy_id': 'spaces_admin_1',
    }),
    dict({
      'administrator_role': None,
      'handle': 'regular_user',
      'id': 3,
      'legacy_id': 'user_1',
    }),
    dict({
      'administrator_role': None,
      'handle': 'no_legacy_id',
      'id': 4,
      'legacy_id': None,
    }),
  ])
# ---
# name: TestUpgrade.test_upgrade_existing_role
  list([
    dict({
      'administrator_role': 'full',
      'handle': 'admin_user',
      'id': 1,
      'legacy_id': 'admin_1',
    }),
  ])
# ---
# name: TestUpgrade.test_upgrade_no_roles
  list([
    dict({
      'administrator_role': None,
      'handle': 'user_1',
      'id': 1,
      'legacy_id': 'user_1',
    }),
    dict({
      'administrator_role': None,
      'handle': 'user_2',
      'id': 2,
      'legacy_id': 'user_2',
    }),
  ])
# ---
